--- a/src/app/components/planet/planet.component.scss
+++ b/src/app/components/planet/planet.component.scss
@@ -148,7 +148,7 @@
         flex-direction: row;
         align-items: flex-start;
         justify-content: center;
-        margin: 70px 0;//var.$bodyMargin;
+        margin: 70px 0;
         gap: 70px;
 
         .planet-info-text {
@@ -174,6 +174,13 @@
 
             >p:not(:last-child) {
                 margin-bottom: 16px;
+            }
+
+            >p:hover {
+                background-color: var.$darkGrey;
+                border: 1px solid var.$darkGrey;
+                transition: 200ms;
+                cursor: pointer;
             }
 
             @each $planet, $color in var.$planet-colors {
@@ -242,11 +249,20 @@
         .planet-info {
             flex-direction: column;
             flex: 1;
+            gap: 35px;
             
             .planet-info-text {
-                min-height: 222px;
+                min-height: 300px;
                 align-items: flex-start;
                 justify-content: flex-start;
+
+                h1 {
+                    font-size: 75px;
+                }
+                
+                p,span {
+                    font-size: 14px;
+                }
 
                 span {
                     margin-top: auto;
@@ -255,6 +271,19 @@
 
             .planet-info-selector {
                 width: 100%;
+                &>p {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    .planet-additional-info {
+        >p {
+            font-size: 11px;
+
+            >span {
+                font-size: 30px;
             }
         }
     }
